Fix Java 8 compatibility - replace List.of() with Collections.emptyList()
The project uses Java 8 but List.of() was introduced in Java 9. Replaced all occurrences with Collections.emptyList() for Java 8 compatibility.

Agent-Logs-Url: https://github.com/Llhz/appvault-store-ascend/sessions/a47afa30-26b5-4b86-8f82-88c41b689b8e

Co-authored-by: Llhz <22681319+Llhz@users.noreply.github.com>